tests/paczka1/small_fuzzy/93409966.err
Error in line 1: A162 S364 42,2
Error in line 2: UJjlidRUZNn A162 36,3
